
== Unreleased

=== Added

* add blank line above nested list that follows compound list item
* convert codeblock with non-contiguous lines beginning with a command prompt to a source,console listing block
* use list continuation to attach blockquote to list item
* handle case when HTML br element appears at start of paragraph

=== Changed

* automatically convert newlines to LF when reading file
* convert indented codeblock to literal (indented) paragraph
* change separator comment from //- to //
* mark br converted from HTML br element
* round CSS width value for image
* upgrade Kramdown to 1.17.0

== 1.0.0.alpha.3 (2018-05-31) - @mojavelinux

=== Added

* patch conversion from HTML br element to native until the fix for gettalong/kramdown#514 is released
* preserve non-default table column alignment
* honor image width specified in style attribute of HTML img element
* replace empty HTML p element with paragraph containing \{blank}

=== Changed

* replace ndash symbol with \-- instead of \&#8211;

== 1.0.0.alpha.2 (2018-05-24) - @mojavelinux

=== Added

* automatically coerce level 5 heading above codeblock to block title
* convert HTML-based admonition blocks
* drop HTML div element if enclosing an image
* transfer id and class/role attributes to block image
* honor image width specified on width attribute of HTML img element

=== Changed

* don't modify AST when converting
* transfer comments above document title to document header
* only process link as image with link if only child
* escape closing square bracket in contents of link
* don't add cols attribute to table if table only has a single column
* don't add blank line between rows if table only has a single column
* expand \&#124; to |
* escape pipe in table cell
* replace ^ with \{caret} in normal text
* replace double underscore in URL with %5F%5F
* don't rewrite bash source language as console

=== Details

{uri-repo}/releases/tag/v1.0.0.alpha.2[git tag] |