@@ -1,0 +1,14 @@
+Here's about how that conversation went:
+
+____
+he said
+______
+she said
+________
+he said
+__________
+she said
+__________
+________
+______
+____
